# Advent-of-Code

./: README.md
2020/: aoc2020.cabal  runSolutions.sh
2020/day01/: Main.hs
2020/day02/: Main.hs  PasswordPolicy.hs  SavedPassword.hs
2020/day03/: Forest.hs  Main.hs  Slope.hs
2020/day04/: Eyecolor.hs  Height.hs  Main.hs  Passport.hs  PassportFields.hs
2020/day05/: Main.hs  PlaneSeat.hs
2020/day06/: DeclarationForm.hs  Main.hs
2020/day07/: BagageRules.hs  Main.hs
2020/day08/: Instruction.hs  Main.hs  Program.hs
2020/day09/: Main.hs
2020/day10/: Main.hs
2020/day11/: Main.hs  NonLocal.hs  Seat.hs
2020/day12/: Instruction.hs  Main.hs  Ship.hs  WaypointedShip.hs
2020/day13/: Bus.hs  CRTSolver.hs  Main.hs
2020/day14/: Bit.hs  DecoderChip.hs  FixedWidth.hs  FloatingAddress.hs  Main.hs  Program.hs
2020/day15/: Game.hs  Main.hs
2020/day16/: Constraint.hs  Main.hs  Ticket.hs  TicketSolver.hs
2020/day17/: ConwayCubes.hs  Coordinate3D.hs  Coordinate4D.hs  Main.hs  Spatial.hs
2020/day18/: Expression.hs  Main.hs  Parser.hs
2020/day19/: Checker.hs  Main.hs  Matcher.hs
2020/day20/: LinkedTile.hs  Main.hs  Puzzle.hs  Reflectable.hs  Rotatable.hs  SeaMonster.hs  Tile.hs
2020/day21/: AllergenChart.hs  Food.hs  Main.hs
2020/day22/: Deck.hs  Game.hs  Main.hs
2020/day23/: Cups.hs  Main.hs
2020/day24/: Floor.hs  HexCoordinate.hs  HexDirection.hs  Main.hs
2020/day25/: Main.hs
2020/utils/: Coordinate.hs  Grid.hs
2021/: aoc2021.cabal
2021/day01/: Main.hs
2021/day02/: Main.hs  Navigation.hs
2021/day03/: Binary.hs  Bit.hs  Main.hs
2021/day04/: BingoCard.hs  BingoNumber.hs  Main.hs
2021/day05/: Line.hs  Main.hs
2021/day06/: Main.hs  School.hs
2021/day07/: Main.hs
2021/day08/: BrokenDisplay.hs  DisplaySolver.hs  Main.hs  Segment.hs
2021/day09/: HeightMap.hs  Main.hs
2021/day10/: Chunk.hs  Interpreter.hs  Main.hs
2021/day11/: Main.hs  OctopusCavern.hs
2021/day12/: Cave.hs  LongPath.hs  Main.hs  PathGenerator.hs  ShortPath.hs
2021/day13/: Fold.hs  Main.hs  TransparentPaper.hs
2021/day14/: Frequencies.hs  InsertionRule.hs  Main.hs  PolymerTemplate.hs
2021/day15/: Cavern.hs  Main.hs  PathFinder.hs
2021/day16/: Bit.hs  BitsParser.hs  Main.hs  Packet.hs
2021/day17/: Main.hs  PhaseSpace.hs  TargetArea.hs
2021/day18/: Leaf.hs  Main.hs  SnailfishNumber.hs
2021/day19/: Main.hs  Point.hs  Scanner.hs  Vector.hs
2021/day20/: Algorithm.hs  Image.hs  Main.hs  Pixel.hs
2021/day21/: Game.hs  Main.hs  Player.hs
2021/day22/: Cuboid.hs  CuboidCounter.hs  Main.hs  Range.hs  RebootStep.hs
2021/day23/: Amphipod.hs  Burrow.hs  BurrowTypes.hs  Chamber.hs  Main.hs
2021/day24/: Main.hs  Transformation.hs
2021/day25/: Main.hs  SeaCucumber.hs  SeaFloor.hs
2021/utils/: Coordinate.hs  Direction.hs  Grid.hs
2022/: aoc2022.cabal  runSolutions.sh
2022/day01/: Inventory.hs  Main.hs
2022/day02/: Main.hs  Move.hs  Outcome.hs  Round.hs
2022/day03/: Main.hs  Rucksack.hs
2022/day04/: Main.hs  Pair.hs  Range.hs
2022/day05/: CraneType.hs  Crates.hs  Main.hs  MoveInstruction.hs
2022/day06/: Main.hs
2022/day07/: Directory.hs  Main.hs  Navigation.hs
2022/day08/: Forest.hs  Main.hs
2022/day09/: Main.hs  Rope.hs  RopeJourney.hs
2022/day10/: Instruction.hs  Main.hs  Pixel.hs
2022/day11/: InspectionRule.hs  KeepAwayGame.hs  Main.hs  MonkeyState.hs
2022/day12/: HeightMap.hs  Hike.hs  Main.hs
2022/day13/: Main.hs  Packet.hs  Parser.hs
2022/day14/: Cave.hs  Main.hs  Sand.hs
2022/day15/: Diagonal.hs  Main.hs  Range.hs  SensorData.hs
2022/day16/: Graph.hs  Main.hs  ValveInfo.hs  ValveJourney.hs
2022/day17/: Cave.hs  CycledList.hs  Jet.hs  Main.hs  Rock.hs
2022/day18/: Coordinate3D.hs  Droplet.hs  Main.hs
2022/day19/: Blueprint.hs  Main.hs  ProductionLine.hs
2022/day20/: Main.hs  PermutedNumber.hs
2022/day21/: Main.hs  MonkeyTree.hs  Operation.hs
2022/day22/: Board.hs  Faces.hs  Main.hs  Movement.hs  Tile.hs  WalkState.hs
2022/day23/: Grove.hs  Main.hs
2022/day24/: Blizzard.hs  Main.hs  Storm.hs  StormJourney.hs
2022/day25/: Main.hs  Snafu.hs
2022/utils/: Coordinate.hs
2023/: aoc-2023.cabal
2023/day01/: TextToNumber.hs
2023/day03/: Engine.hs  EngineIndicator.hs  EngineNumber.hs  Gear.hs
2023/day05/: Range.hs  RangeMapper.hs
2023/day11/: Universe.hs
2023/day12/: Record.hs
2023/day14/: RockContainers.hs
2023/day15/: Main.hs
2023/day17/: City.hs  Main.hs  OutgoingPath.hs  SearchContext.hs
2023/day23/: Hike.hs
2023/day24/: Vector.hs
2023/utils/: Grid.hs
