cabal-version:      3.0
name:               aoc2020
version:            0.1.0.0
author:             Jetze Zoethout
build-type:         Simple

common common
    ghc-options: -Wall -O2
    default-extensions:   RecordWildCards
                        , TypeApplications
                        , OverloadedStrings
                        , OverloadedRecordDot
                        , InstanceSigs
                        , TupleSections
                        , DeriveFunctor
    build-depends:    base ^>=4.17.2.1
                    , text
                    , split
                    , containers
                    , mtl
                    , vector
                    , clock
    default-language: Haskell2010

library utils
    import:           common
    exposed-modules:  Coordinate
                    , Direction
                    , Grid
                    , Parsers
                    , ProcessFile
                    , TaggedRow
    hs-source-dirs:   utils
    default-language: Haskell2010

executable day25
    import:           common
    main-is:          Main.hs
    other-modules:    
    build-depends:    utils
    hs-source-dirs:   day25

executable day24
    import:           common
    main-is:          Main.hs
    other-modules:    HexCoordinate
                    , HexDirection
                    , Floor
    build-depends:    utils
    hs-source-dirs:   day24

executable day23
    import:           common
    main-is:          Main.hs
    other-modules:    Cups
    build-depends:    utils
    hs-source-dirs:   day23

executable day22
    import:           common
    main-is:          Main.hs
    other-modules:    Deck
                    , Game
    build-depends:    utils
    hs-source-dirs:   day22

executable day21
    import:           common
    main-is:          Main.hs
    other-modules:    Food
                    , AllergenChart
    build-depends:    utils
    hs-source-dirs:   day21

executable day20
    import:           common
    main-is:          Main.hs
    other-modules:    Tile
                    , LinkedTile
                    , Reflectable
                    , Rotatable
                    , Puzzle
                    , SeaMonster
    build-depends:    utils
    hs-source-dirs:   day20

executable day19
    import:           common
    main-is:          Main.hs
    other-modules:    Matcher
                    , Checker
    build-depends:    utils
    hs-source-dirs:   day19

executable day18
    import:           common
    main-is:          Main.hs
    other-modules:    Expression
                    , Parser
    build-depends:    utils
    hs-source-dirs:   day18

executable day17
    import:           common
    main-is:          Main.hs
    other-modules:    Coordinate3D
                    , ConwayCubes
                    , Coordinate4D
                    , Spatial
    build-depends:    utils
    hs-source-dirs:   day17

executable day16
    import:           common
    main-is:          Main.hs
    other-modules:    Constraint
                    , Ticket
                    , TicketSolver
    build-depends:    utils
    hs-source-dirs:   day16

executable day15
    import:           common
    main-is:          Main.hs
    other-modules:    Game
    build-depends:    utils
    hs-source-dirs:   day15

executable day14
    import:           common
    main-is:          Main.hs
    other-modules:    Bit
                    , FixedWidth
                    , Program
                    , DecoderChip
                    , FloatingAddress
    build-depends:    utils
    hs-source-dirs:   day14

executable day13
    import:           common
    main-is:          Main.hs
    other-modules:    Bus
                    , CRTSolver
    build-depends:    utils
    hs-source-dirs:   day13

executable day12
    import:           common
    main-is:          Main.hs
    other-modules:    Instruction
                    , Ship
                    , WaypointedShip
    build-depends:    utils
    hs-source-dirs:   day12

executable day11
    import:           common
    main-is:          Main.hs
    other-modules:    Seat
                    , NonLocal
    build-depends:    utils
    hs-source-dirs:   day11

executable day10
    import:           common
    main-is:          Main.hs
    other-modules:    
    build-depends:    utils
    hs-source-dirs:   day10

executable day09
    import:           common
    main-is:          Main.hs
    other-modules:    
    build-depends:    utils
    hs-source-dirs:   day09

executable day08
    import:           common
    main-is:          Main.hs
    other-modules:    Instruction
                    , Program
    build-depends:    utils
    hs-source-dirs:   day08

executable day07
    import:           common
    main-is:          Main.hs
    other-modules:    BagageRules
    build-depends:    utils
    hs-source-dirs:   day07

executable day06
    import:           common
    main-is:          Main.hs
    other-modules:    DeclarationForm
    build-depends:    utils
    hs-source-dirs:   day06

executable day05
    import:           common
    main-is:          Main.hs
    other-modules:    PlaneSeat
    build-depends:    utils
    hs-source-dirs:   day05

executable day04
    import:           common
    main-is:          Main.hs
    other-modules:    PassportFields
                    , Passport
                    , Height
                    , Eyecolor
    build-depends:    utils
    hs-source-dirs:   day04

executable day03
    import:           common
    main-is:          Main.hs
    other-modules:    Forest
                    , Slope
    build-depends:    utils
    hs-source-dirs:   day03

executable day02
    import:           common
    main-is:          Main.hs
    other-modules:    PasswordPolicy
                    , SavedPassword
    build-depends:    utils
    hs-source-dirs:   day02

executable day01
    import:           common
    main-is:          Main.hs
    other-modules:    
    build-depends:    utils
    hs-source-dirs:   day01
